--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "next-pages-template",
-  "version": "0.1.0",
+  "name": "solexplore",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint . --ext .ts,.tsx -c .eslintrc.json --fix"
+    "lint": "next lint"
   },
   "dependencies": {
     "@heroui/button": "2.2.16",
@@ -22,8 +22,15 @@
     "@heroui/system": "2.4.12",
     "@heroui/theme": "2.4.12",
     "@react-aria/visually-hidden": "3.8.20",
+    "@solana/wallet-adapter-base": "^0.9.24",
+    "@solana/wallet-adapter-react": "^0.15.36",
+    "@solana/wallet-adapter-react-ui": "^0.9.36",
+    "@solana/wallet-adapter-wallets": "^0.19.33",
+    "@solana/web3.js": "^1.98.0",
+    "axios": "^1.8.4",
     "clsx": "2.1.1",
-    "framer-motion": "^11.13.1",
+    "critters": "^0.0.23",
+    "framer-motion": "^11.18.2",
     "intl-messageformat": "^10.5.0",
     "next": "15.0.4",
     "next-themes": "^0.4.4",
